# pocketflow-rs

./: Cargo.toml  LICENSE  README.md  README.zh.md  publish-simple.sh  publish.sh
.github/: copilot-instructions.md
examples/: advanced_flow.rs  basic.rs  batch_flow.rs  minimal_test.rs  quick_test.rs  simple_test.rs  state_machine.rs
pocketflow-agent/: Cargo.toml  README.md
pocketflow-agent/examples/: advanced_agent_demo.rs  simple_agent_demo.rs
pocketflow-agent/src/: agent_node.rs  agent_types.rs  builders.rs  error.rs  lib.rs  multi_agent.rs  streaming.rs
pocketflow-cognitive/: Cargo.toml  README.md
pocketflow-cognitive/examples/: iterative_agent_demo.rs  think_plan_execute.rs  thinking_planning_agent.rs  thinking_workflow.rs
pocketflow-cognitive/src/: agent.rs  agent_iterative.rs  agent_iterative_test.rs  error.rs  execution.rs  execution_retry_test.rs  execution_test.rs  lib.rs  pipeline_integration_test.rs  planning_json_test.rs  reasoning_json_test.rs  traits.rs  utils.rs
pocketflow-cognitive/src/context/: mod.rs
pocketflow-cognitive/src/memory/: mod.rs
pocketflow-cognitive/src/planning/: adaptive.rs  goal_oriented.rs  hierarchical.rs  mod.rs
pocketflow-cognitive/src/thinking/: chain_of_thought.rs  explanation.rs  mod.rs  reflection.rs
pocketflow-core/: Cargo.toml  README.md
pocketflow-core/examples/: advanced_flow.rs  basic.rs  batch_flow.rs  minimal_test.rs  quick_test.rs  simple_test.rs  state_machine.rs
pocketflow-core/src/: context.rs  error.rs  flow.rs  flow_advanced.rs  flow_simple.rs  lib.rs  node.rs
pocketflow-mcp/: Cargo.toml  README.md
pocketflow-mcp/examples/: mcp_demo_simple.rs  mcp_integration.rs  simple_mcp_demo.rs
pocketflow-mcp/src/: client.rs  context.rs  error.rs  lib.rs  registry.rs  server.rs
pocketflow-tools/: Cargo.toml  README.md
pocketflow-tools/examples/: search_and_python_flow.rs
pocketflow-tools/src/: core.rs  custom.rs  error.rs  lib.rs  python.rs  registry.rs  utils.rs  validation.rs  web.rs
src/: error.rs  flow_advanced.rs  lib.rs  macros.rs  state.rs  types.rs
src/flow/: async_flow.rs  mod.rs  sync.rs
src/node/: async_node.rs  base.rs  mod.rs  sync.rs
