[workspace]
members = [
    "pocketflow-core",
    "pocketflow-mcp",
    "pocketflow-cognitive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["akagi201 <akagi201@gmail.com>"]
repository = "https://github.com/longcipher/pocketflow-rs"
license = "MIT"
readme = "README.md"

[workspace.metadata.cargo-machete]
ignored = ["futures", "metrics", "tracing"]

[workspace.dependencies]
# Core async and concurrency
async-trait = "0.1"
futures = "0.3"
once_cell = "1.19"
tokio = { version = "1.47.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Error handling
eyre = "0.6"
thiserror = "2.0"

# Core framework
dptree = "0.5.1"

# MCP integration
ultrafast-mcp = { version = "202506018.1.0", features = [
    "http-with-auth",
] }

# Optional features
metrics = "0.24"
tracing = "0.1"

# Dev dependencies
fastrand = "2.0"
tokio-test = "0.4"

# Workspace internal dependencies
pocketflow-cognitive = { path = "pocketflow-cognitive" }
pocketflow-core = { path = "pocketflow-core" }
pocketflow-mcp = { path = "pocketflow-mcp" }

# Additional dependencies for cognitive features
uuid = { version = "1.0", features = ["v4", "serde"] }
