[workspace]
members = [
    "pocketflow-core",
    "pocketflow-mcp",
    "pocketflow-cognitive",
    "pocketflow-agent",
    "pocketflow-tools",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["akagi201 <akagi201@gmail.com>"]
repository = "https://github.com/longcipher/pocketflow-rs"
license = "Apache-2.0"
readme = "README.md"

[workspace.metadata.cargo-machete]
ignored = ["futures", "metrics", "tracing"]

[workspace.dependencies]
# Core async and concurrency
async-trait = "0.1"
futures = "0.3"
once_cell = "1.19"
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"

# JSON schema and validation
jsonschema = "0.32.0"
schemars = { version = "1.0.4", features = ["uuid1"] }

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Error handling
eyre = "0.6"
thiserror = "2.0.12"

# Core framework
dptree = "0.5.1"

# MCP integration
ultrafast-mcp = { version = "202506018.1.0", features = [
    "http-with-auth",
] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# AI and LLM integration
genai = "0.3.5"

# Utilities
regex = "1.10"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Optional features
metrics = "0.24"
tracing = "0.1"

# Dev dependencies
fastrand = "2.0"
pretty_assertions = "1.4"
tokio-test = "0.4"
tracing-subscriber = "0.3"
tracing-test = "0.2"

# Workspace internal dependencies
pocketflow-agent = { path = "pocketflow-agent", version = "0.2.0" }
pocketflow-cognitive = { path = "pocketflow-cognitive", version = "0.2.0" }
pocketflow-core = { path = "pocketflow-core", version = "0.2.0" }
pocketflow-mcp = { path = "pocketflow-mcp", version = "0.2.0" }
pocketflow-tools = { path = "pocketflow-tools", version = "0.2.0" }
