[package]
name = "pocketflow-cognitive"
version = "0.1.0"
edition = "2021"
description = "Cognitive extensions for PocketFlow - thinking, planning, and reasoning capabilities"
authors = ["PocketFlow Contributors"]
license = "MIT OR Apache-2.0"
keywords = ["workflow", "cognitive", "ai", "reasoning", "planning"]
categories = ["development-tools", "asynchronous"]

[dependencies]
# Core dependencies
pocketflow-core = { path = "../pocketflow-core", version = "0.1.0" }
pocketflow-mcp = { path = "../pocketflow-mcp", version = "0.1.0" }

# Async runtime
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling  
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["reasoning", "planning", "memory"]
reasoning = []
planning = []
memory = []
advanced-planning = ["planning"]
