[package]
name = "pocketflow-cognitive"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Cognitive extensions for PocketFlow - thinking, planning, and reasoning capabilities"
keywords = ["workflow", "cognitive", "ai", "reasoning", "planning"]
categories = ["development-tools", "asynchronous"]

[dependencies]
# Core dependencies
pocketflow-core = { workspace = true }
pocketflow-mcp = { workspace = true }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling  
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = ["reasoning", "planning", "memory"]
reasoning = []
planning = []
memory = []
advanced-planning = ["planning"]
