[package]
name = "pocketflow-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Tool system for PocketFlow workflow automation"
keywords = ["workflow", "automation", "tools", "async"]
categories = ["development-tools", "automation"]

[dependencies]
# Core dependencies
async-trait = { workspace = true }
pocketflow-core = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# Serialization and validation
jsonschema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# HTTP client (optional)
reqwest = { workspace = true, optional = true }

# Utilities
regex = { workspace = true }
tracing = { workspace = true }
urlencoding = "2"

# Development dependencies
[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }

[features]
default = ["http"]
http = ["reqwest"]
full = ["http"]
